--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -2,7 +2,37 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/02.md`
+### Window.localStorage
+
+From MDN: The localStorage read-only property of the window interface allows you
+to access a Storage object for the Document's origin; the stored data is saved
+across browser sessions.
+
+localStorage is similar to sessionStorage, except that while localStorage data
+has no expiration time, sessionStorage data gets cleared when the page session
+ends — that is, when the page is closed. (localStorage data for a document
+loaded in a "private browsing" or "incognito" session is cleared when the last
+"private" tab is closed.)
+
+### What is lexical scoping?
+
+Describes how a parser resolves variable names when functions are nested. The
+word lexical refers to the fact that lexical scoping uses the location where a
+variable is declared within the source code to determine where that variable is
+available. Nested functions have access to variables declared in their outer
+scope. https://developer.mozilla.org/en-US/docs/Web/JavaScript/Closures
+
+### Closures
+
+A closure is the combination of a function and the lexical environment within
+which that function was declared. This environment consists of any local
+variables that were in-scope at the time the closure was created.
+https://developer.mozilla.org/en-US/docs/Web/JavaScript/Closures
+
+### When does useEffect run?
+
+By default, effects run after every completed render, but you can choose to fire
+them only when certain values have changed.
 
 ## Background
 
