--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -2,7 +2,17 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/03.md`
+### What is colocation? 
+
+Place code as close to where it's relevant as possible.
+
+One of the leading causes to slow React applications is global state, especially the rapidly changing variety. 
+
+⚡ Always remember to push state back down when refactoring a component.
+
+### What is prop drilling?
+
+Prop drilling (also called "threading") refers to the process you have to go through to get data to parts of the React Component tree. For example, component parent accepts props that it doesn't use directory, but its children need.
 
 ## Background
 
